Fix typo and outgoing link_to tag

--- a/app/views/grants/criteria/index.html.haml
+++ b/app/views/grants/criteria/index.html.haml
@@ -16,10 +16,10 @@
     .cell.small-12
       %p
         %em
-          Reviewers will use the criteria defined on this page to assess their assigned submissions. You may also provide instuctions and guidelines to help them score the submissions.
+          Reviewers will use the criteria defined on this page to assess their assigned submissions. You may also provide instructions and guidelines to help them score the submissions.
       %p
         %em
-          Scoring matches the NIH's #{link_to '9-point scale', href: 'https://grants.nih.gov/grants/policy/review/rev_prep/scoring.htm'} as shown below.
+          Scoring matches the NIH's #{link_to '9-point scale', 'https://grants.nih.gov/grants/policy/review/rev_prep/scoring.htm'} as shown below.
 
   .grid-x
     .button-group
