Centralize th alignment in app.scss #450

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -52,6 +52,13 @@
         font-size: .95em;
       }
     }
+
+    thead tr {
+      th {
+        font-size: .85em;
+        vertical-align: bottom;
+      }
+    }
   }
 
   footer {
