--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag     wicked_pdf_asset_base64("pdf")
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
   %body
