First draft submission reviews index #460

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -110,3 +110,8 @@ trix-editor + p.help-text {
 .not-allowed {
   cursor: not-allowed;
 }
+
+// Related to Foundation tabs highlighting
+.tabs-content {
+  border: 0px !important;
+}
