--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -36,8 +36,8 @@
       %thead
         - if current_user.get_role_by_grant(grant: @grant)
           %tr
-            %th{colspan: 5}
-            %th{colspan: 2}
+            %th{ colspan: 5 }
+            %th{ colspan: 3 }
               Scores
         %tr
           %th
@@ -56,7 +56,9 @@
                 = sort_link(@q, :average_overall_impact_score_nulls_last, 'Overall Impact')
             %th
               %span{ title: 'Average of scored Criteria - scored first' }
-                = sort_link(@q, :composite_score_nulls_last, 'Composite Score')
+                = sort_link(@q, :composite_score_nulls_last, 'Composite')
+            %th
+
 
       %tbody
         - @submissions.each do |submission|
@@ -98,6 +100,9 @@
               %td.composite{data: { composite: submission.id } }
                 %span{title: 'Average of Scored Criteria'}
                   = review_data.composite_score
+              %td
+                %span{class: 'small'}
+                  = link_to 'PDF', grant_submission_reviews_path(@grant, submission, { format: 'pdf' } )
 
 
     != pagy_foundation_nav(@pagy)
