Task/add wicked_pdf gem and Submission reviews PDF (#466)
* Add and configure wicked_pdf gem #465

* Add pdf-specific CSS and layout #465

* Add pdf format to index #460

* First draft submission reviews index #460

* Update CSS and views to accommodate PDF #460

* Update specs #460

* Add PDF icon links #460

* Add simple PDF generation spec #460

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -69,5 +69,31 @@ main {
         }
       }
     }
+    @media print {
+      .criterion,
+      #overall-impact {
+        border-bottom: 0px !important;
+      }
+      .criterion .row,
+      #overall-impact .row {
+        .review {
+          clear: both;
+          display: flex;
+          margin-bottom: 0.5em;
+          .reviewer {
+            float: left;
+            max-width: 25%;
+          }
+          .responses {
+            font-size: 1em;
+            float: left;
+            max-width: 70%;
+          }
+          &:last-of-type {
+            margin-bottom: 1em;
+          }
+        }
+      }
+    }
   }
 }
