--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -36,8 +36,8 @@
       %thead
         - if current_user.get_role_by_grant(grant: @grant)
           %tr
-            %th{colspan: 5}
-            %th{colspan: 2}
+            %th{ colspan: 5 }
+            %th{ colspan: 3 }
               Scores
         %tr
           %th
@@ -56,7 +56,7 @@
                 = sort_link(@q, :average_overall_impact_score_nulls_last, 'Overall Impact')
             %th
               %span{ title: 'Average of scored Criteria - scored first' }
-                = sort_link(@q, :composite_score_nulls_last, 'Composite Score')
+                = sort_link(@q, :composite_score_nulls_last, 'Composite')
 
       %tbody
         - @submissions.each do |submission|
@@ -90,6 +90,7 @@
                   = link_to 'Assign Reviews', grant_reviewers_path(@grant, submission)
                 - else
                   = link_to 'Reviews', grant_submission_reviews_path(@grant, submission)
+                  = link_to "#{image_tag 'PDF_24.png', class: 'icon', title: 'Save reviews summary as a PDF' }".html_safe, grant_submission_reviews_path(@grant, submission, { format: 'pdf' } )
                   %div.count.small{title: 'Completed / Assigned', data: { completed: {reviews: submission.id}}}
                     #{review_data.completed_review_count} / #{review_data.assigned_review_count}
               %td.overall-impact{data: { overall: { impact: submission.id } } }
