Remove HTML tags from page title #470

--- a/app/views/banners/edit.html.haml
+++ b/app/views/banners/edit.html.haml
@@ -1,4 +1,5 @@
-- content_for(:page_title, "Edit - Banner '#{@banner.body.truncate_words(4)}'")
+- content_for(:page_title, "Edit - Banner: #{strip_tags(@banner.body.truncate_words(4))}")
+
 
 %h1
   Edit Banner
