--- a/app/views/layouts/pdf.html.haml
+++ b/app/views/layouts/pdf.html.haml
@@ -7,9 +7,8 @@
       = title_tag_content(page_title: yield(:page_title))
     = csrf_meta_tags
     = csp_meta_tag
-    = wicked_pdf_stylesheet_link_tag "application", media: 'all'
+    = wicked_pdf_stylesheet_link_tag "application"
     = wicked_pdf_stylesheet_link_tag "pdf"
-    = wicked_pdf_javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
   %body
     %div.grid-container
