Task/misc front end edits (#481)
* Switch view tab text based on publish status #451

* Add help text to slug input #451

* Format comments on reviews summary to include line breaks #464

* Add Grant title in header #463

* Guidance text for Grant duplication landing page #453

* Change success message based on visibility #469

* Front end updates to Banners #470

* Remove HTML tags from page title #470

--- a/app/views/banners/edit.html.haml
+++ b/app/views/banners/edit.html.haml
@@ -1,4 +1,8 @@
-- content_for(:page_title, "Edit - #{@banner.id}")
+- content_for(:page_title, "Edit - Banner: #{strip_tags(@banner.body.truncate_words(4))}")
+
+
+%h1
+  Edit Banner
 
 = form_with model: @banner, local: true, id: 'banner-edit' do |f|
   = render 'form', f: f, banner: @banner
