Final front-end updates in #451

--- a/app/views/grant_submissions/forms/edit.html.haml
+++ b/app/views/grant_submissions/forms/edit.html.haml
@@ -11,6 +11,10 @@
   %h3
     Questions
 
+  %p
+    %em
+      Applicants will respond to questions defined on this page to apply to your grant. Questions may be organized into multiple sections.
+
   - unless @grant.form.available?
     .callout.warning
       %h5
