--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -16,7 +16,7 @@
         <br/>
         (NCATS UL1TR001422 and U24TR002306)
       %p
-        = mail_to 'competitions-cd2h@northwestern.edu'
+        = mail_to COMPETITIONS_CONFIG[:contact_email]
       %p
         = precede 'v' do
           = Competitions::Application::VERSION
