Fix typo and reword text #453

--- a/app/views/grants/duplicate/new.html.haml
+++ b/app/views/grants/duplicate/new.html.haml
@@ -8,7 +8,7 @@
   Duplicating a grant copies information from the previous grant so you don't need to start from scratch.
 
 %p
-  Once you update and save, all roles, questions, and criteria will be copied from from
+  Once you update and save, all questions, criteria, and roles will be copied from
   = link_to "#{@grant.name}", grant_path(params[:grant_id])
 
 
