--- a/app/views/grant_submissions/submissions/reviews/index.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/index.html.haml
@@ -1,24 +1,39 @@
 - content_for(:page_title, "Reviews of #{@submission.title}")
 
+%h1
+  = @grant.name
+
 = render 'shared/grant_edit_tabbed_menu', { grant: @submission.grant }
 
 .tabs-panel.is-active
   %h3
-    = "Reviews of #{@submission.title}:"
+    Reviews
+    %span.pdf-hide
+      of
+      = @submission.title
 
   #reviews-overview.grid-container-x
-    .grid-x
-      .cell.small-12.medium-2
-        %strong
-          Submission:
-      .cell.small-12.medium-10
-        = link_to @submission.title, grant_submission_path(@submission.grant, @submission)
     .grid-x
       .cell.small-12.medium-2
         %strong
           Applicant:
       .cell.small-12.medium-10
         = full_name(@submission.applicant)
+    .grid-x
+      .cell.small-12.medium-2
+        %strong
+          Submission:
+      .cell.small-12.medium-10
+        = link_to @submission.title, grant_submission_path(@submission.grant, @submission)
+
+    #pdf.grid-container-x.pdf-hide
+      .grid-x.grid-margin-y
+        .cell.small-12
+          %p.small
+            = link_to "Save this page as a PDF #{image_tag 'PDF_24.png', class: 'icon' }".html_safe, grant_submission_reviews_path(@grant, @submission, { format: 'pdf' } )
+
+
+
     .grid-x.grid-padding-y
       .cell.small-12
         - if @reviews.empty?
@@ -37,7 +52,7 @@
               %tr
                 %th
                   = sort_link(@q, :reviewer_last_name, 'Reviewer')
-                %th
+                %th.pdf-hide
                   = sort_link(@q, :overall_impact, 'Review')
                 %th
                   = sort_link(@q, :overall_impact)
@@ -78,7 +93,7 @@
                             NS
                       - if scored_criterion.comment.present?
                         .row{id: "criterion-#{criterion.id}-comment"}
-                          = scored_criterion.comment
+                          = simple_format(scored_criterion.comment)
 
 
       .grid-x.grid-padding-y
@@ -90,7 +105,7 @@
             .row
               .cell.small-12.reviews
                 - @reviews.completed.each do |review|
-                  .grid-x.review
+                  .grid-x.grid-margin-x.review
                     .cell.small-12.medium-2.reviewer
                       = full_name(review.reviewer)
                     .cell.small-12.medium-10.responses
