added configurable application name to mailers. #496

--- a/app/views/grant_creator_request_review_mailer/rejected.html.haml
+++ b/app/views/grant_creator_request_review_mailer/rejected.html.haml
@@ -2,7 +2,7 @@
   Dear #{full_name(@requester)},
 
 %p
-  You request for Grant Creator rights has been rejected.
+  You request for Grant Creator rights in #{link_to @application_name, root_url} has been rejected.
 
 %p
   You may resubmit a
