--- a/app/views/grant_creator_request_review_mailer/approved.html.haml
+++ b/app/views/grant_creator_request_review_mailer/approved.html.haml
@@ -2,7 +2,7 @@
   Dear #{full_name(@requester)},
 
 %p
-  You request for Grant Creator rights has been approved.
+  You request for Grant Creator rights in #{link_to @application_name, root_url} has been approved.
 
 %p
   After you log in, you can create a new Grant by visiting:<br/>
