--- a/app/views/grant_submissions/submissions/reviews/index.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/index.html.haml
@@ -51,11 +51,11 @@
             %thead
               %tr
                 %th
-                  = sort_link(@q, :reviewer_last_name, 'Reviewer')
+                  = sort_link(@q, :reviewer_last_name, 'Reviewer',{}, {title: 'Sort on Reviewer'})
                 %th.pdf-hide
-                  = sort_link(@q, :overall_impact, 'Review')
+                  = sort_link(@q, :overall_impact, 'Review',{}, {title: 'Sort on Completed'})
                 %th
-                  = sort_link(@q, :overall_impact)
+                  = sort_link(@q, :overall_impact,{}, {title: 'Sort on Overall Impact Score'})
                 %th
                   Composite
                 - @grant.criteria.each do |criterion|
