--- a/app/views/profiles/reviews/index.html.haml
+++ b/app/views/profiles/reviews/index.html.haml
@@ -26,17 +26,17 @@
     %thead
       %tr
         %th
-          = sort_link(@q, :overall_impact_score, 'Completed')
+          = sort_link(@q, :overall_impact_score, 'Completed',{}, {title: 'Sort on Completed'})
         %th
-          = sort_link(@q, :grant_name, 'Grant')
+          = sort_link(@q, :grant_name, 'Grant',{}, {title: 'Sort on Grant'})
         %th
-          = sort_link(@q, :applicant_last_name, 'Applicant')
+          = sort_link(@q, :applicant_last_name, 'Applicant',{}, {title: 'Sort on Applicant'})
         %th
-          = sort_link(@q, :submission_title, 'Submission Title')
+          = sort_link(@q, :submission_title, 'Submission Title',{}, {title: 'Sort on Submission Title'})
         %th
-          = sort_link(@q, :created_at, 'Assigned On')
+          = sort_link(@q, :created_at, 'Assigned On',{}, {title: 'Sort on Assigned Date'})
         %th
-          = sort_link(@q, :grant_review_close_date, 'Due by Date')
+          = sort_link(@q, :grant_review_close_date, 'Due by Date',{}, {title: 'Sort on Due Date'})
 
     %tbody
       - @reviews.each do |review|
