--- a/app/views/grant_submissions/submissions/reviews/index.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/index.html.haml
@@ -53,7 +53,7 @@
                 %th
                   = sort_link(@q, :reviewer_last_name, 'Reviewer',{}, {title: 'Sort on Reviewer'})
                 %th.pdf-hide
-                  = sort_link(@q, :overall_impact, 'Review',{}, {title: 'Sort on Completed'})
+                  = sort_link(@q, :overall_impact, 'Review',{}, {title: 'Sort on Overall Impact Score'})
                 %th
                   = sort_link(@q, :overall_impact,{}, {title: 'Sort on Overall Impact Score'})
                 %th
