--- a/app/views/grants/reviews/index.html.haml
+++ b/app/views/grants/reviews/index.html.haml
@@ -48,9 +48,9 @@
               %th
                 = sort_link(@q, :submission_title, 'Submission',{}, {title: 'Sort on Submission Title'})
               %th
-                = sort_link(@q, :reviewer_last_name, 'Reviewer',{}, {title: 'Sort on Reviewer Last Name'})
+                = sort_link(@q, :reviewer_last_name, 'Reviewer',{}, {title: 'Sort on Reviewer'})
               %th
-                = sort_link(@q, :overall_impact_score, 'Review',{}, {title: 'Sort on Completed'})
+                = sort_link(@q, :overall_impact_score, 'Review',{}, {title: 'Sort on Overall Impact Score'})
               %th
                 = sort_link(@q, :overall_impact_score,{}, {title: 'Sort on Overall Impact Score'})
               %th Composite Score
