--- a/app/views/profiles/submissions/index.html.haml
+++ b/app/views/profiles/submissions/index.html.haml
@@ -31,7 +31,7 @@
         %th
           = sort_link(@q, :state, 'State',{}, {title: 'Sort on State'})
         %th
-          = sort_link(@q, :updated_at, 'Last Updated',{}, {title: 'Sort on Updated At'})
+          = sort_link(@q, :updated_at, 'Last Updated',{}, {title: 'Sort on Updated'})
         %th
     %tbody
       - @submissions.each do |submission|
