--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -30,7 +30,7 @@
         %th
           = sort_link(@q, :email,{}, {title: 'Sort on Email'})
         %th
-          = sort_link(@q, :created_at, 'Joined',{}, {title: 'Sort on Joined On'})
+          = sort_link(@q, :created_at, 'Joined',{}, {title: 'Sort on Join Date'})
         %th
           = sort_link(@q, :current_sign_in_at, 'Last Access',{}, {title: 'Sort on Last Access'})
         %th
