--- a/app/views/shared/_pagy_header.html.haml
+++ b/app/views/shared/_pagy_header.html.haml
@@ -1,2 +1,6 @@
 %div.pagy-header
   != pagy_info(@pagy)
+  - unless params[:q].nil? || params[:q].values.all?(&:blank?)
+    \-
+    = link_to 'Reset search', request.path
+
