--- a/app/views/grants/reviews/index.html.haml
+++ b/app/views/grants/reviews/index.html.haml
@@ -19,12 +19,12 @@
           - if policy(@grant).grant_editor_access?
             %li
               = link_to 'Add reviewers or assign reviews', grant_reviewers_path(@grant)
-          - unless @reviews.empty?
+          - unless @grant.reviews.none?
             %li
-              = link_to "Save all Reviews #{image_tag 'XLSX_24.png', class: 'icon' }".html_safe, grant_reviews_url(@grant, {format: 'xlsx'}), title: 'Download as Excel', class: 'icon-24px'
+              = link_to "Save all Reviews #{image_tag 'XLSX_24.png', class: 'icon' }".html_safe, grant_reviews_path(@grant, {format: 'xlsx'}), title: 'Download as Excel', id: 'excel-export', class: 'icon-24px'
           - if policy(@grant).grant_editor_access? && @grant.reviews.incomplete.any?
             %li
-              = link_to "Send Reminder Reviewers", reminders_grant_reviews_path, data: { confirm: 'An email reminder will be sent to all reviewers with incomplete reviews on this grant.' }
+              = link_to "Send Reminder to Reviewers", reminders_grant_reviews_path, data: { confirm: 'An email reminder will be sent to all reviewers with incomplete reviews on this grant.' }
     = search_form_for @q, url: grant_reviews_path(@grant) do |f|
       .top-bar-right
         %ul.menu
